--- a/client/src/components/home/Picture.css
+++ b/client/src/components/home/Picture.css
@@ -6,8 +6,13 @@
   bottom: 200px;
   left: -150px;
   color: #fd8a5e;
+  width: 20vw;
+  height: 14vh;
 }
 .card-text {
   color: #019286;
   font-family: "Oxygen", sans-serif;
+}
+.card-title {
+  font-size: 1.3vw;
 }
