result page is done

--- a/client/src/components/home/Practice.css
+++ b/client/src/components/home/Practice.css
@@ -1,24 +1,33 @@
 .container {
-  height: 100%;
-  margin: 0;
-  font-family: "Rowdies", cursive;
+	height: 100%;
+	margin: 0;
+	font-family: "Rowdies", cursive;
 }
 
 .practice-pic {
-  width: 15rem;
+	width: 15rem;
 }
 .practice-text {
-  display: flex;
-  flex: 1;
-  justify-content: center;
-  align-items: center;
+	display: flex;
+	flex: 1;
+	justify-content: center;
+	align-items: center;
 }
 h1 {
-  color: #fd8a5e;
+	color: #fd8a5e;
 }
 h5 {
-  color: #ff598f;
+	color: #ff598f;
 }
 .driver-card {
-  font-size: 1vw;
+	font-size: 1vw;
+}
+.practice-pic:hover {
+	position: relative;
+	top: -25px;
+	left: -15px;
+	width: 350px;
+	height: auto;
+	display: block;
+	z-index: 999;
 }
