--- a/client/src/components/freeTest/FreeTest.css
+++ b/client/src/components/freeTest/FreeTest.css
@@ -14,7 +14,7 @@ h3 {
 }
 h4,
 label {
-	font-size: 2.4vh;
+	font-size: 2.2vh;
 }
 .test-part {
 	display: flex;
@@ -38,13 +38,11 @@ label {
 	-webkit-box-shadow: 0 0 2px 1px rgb(4, 64, 112);
 	-moz-box-shadow: 0 0 2px 1px rgb(4, 64, 112);
 	box-shadow: 0 0 2px 1px rgb(4, 64, 112);
-	margin-right: 1rem;
 	display: flex;
 	flex: 1;
 	justify-content: flex-start;
 	align-items: center;
 	padding: 1vw;
-
 }
 .check-box {
 	background-color: #c9daf0;
@@ -52,9 +50,18 @@ label {
 	-moz-box-shadow: 0 0 2px 1px rgb(4, 64, 112);
 	box-shadow: 0 0 2px 1px rgb(4, 64, 112);
 	padding: 1vw;
-
 }
 .next-button {
 	width: 12vw;
 }
+@media only screen and (min-width: 600px) {
+	.questions,
+	.situation {
+		margin-left: 80px;
+		margin-right: 0;
+	}
+	.check-box {
+		margin-left: 0;
 
+	}
+}
