--- a/client/src/components/home/Picture.css
+++ b/client/src/components/home/Picture.css
@@ -1,27 +1,46 @@
 .first-image {
   min-width: 100vw;
-  height: 60vh;
 }
 .driver-card {
   position: absolute;
-  bottom: 170px;
-  left: -150px;
-  color: #fd8a5e;
+  top: 100px;
+  left: 100px;
   width: 20vw;
   height: 14vh;
-}
-.card-text {
-  color: #019286;
-  font-family: "Oxygen", sans-serif;
-  font-size: 1rem;
+  font-family: "Source Sans Pro", Helvetica, sans-serif;
 }
 .card-title {
-  font-size: 1.4vw;
+  color: white;
+  font-size: 5rem;
+  line-height: 1;
+  text-transform: uppercase;
+  text-align: center;
+}
+.h-text {
+  color: white;
+  font-size: 1.25rem;
+  font-style: italic;
+  margin-top: -0.25rem;
+  text-align: center;
+}
+.go:hover {
+  box-shadow: inset 0 0 0 2px #b4ecff;
+  color: #e9f1f3 !important;
+}
+.go {
+  width: 100px;
+  position: absolute;
+  bottom: 20px;
+  left: 800px;
+  padding: 0;
+  cursor: pointer;
+  display: flex;
+  flex: 1;
+  justify-content: center;
+  align-items: center;
 }
 @media only screen and (max-width: 600px) {
   .first-image {
-    min-width: 110vw;
-    height: 30vh;
-    margin-bottom: 10%;
+    width: 500px;
   }
 }
