--- a/client/src/components/tests/Tests.css
+++ b/client/src/components/tests/Tests.css
@@ -1,12 +1,35 @@
-.result-part {
+.tests-part {
   height: 100%;
   margin: 0;
-  font-family: "Rowdies", cursive;
-  font-size: 1.3rem;
+  font-family: "Source Sans Pro", Helvetica, sans-serif;
+  font-size: 1.4rem;
+  font-weight: 600;
+  background-color: rgb(35, 42, 56);
+  color: rgb(35, 42, 56);
 }
-.picture-part {
+.image-part {
+  display: flex;
+  flex: 1;
+  justify-content: space-around;
+  align-items: center;
+  background-color: rgb(241, 242, 247);
+  border-radius: 50px;
+  margin: 40px;
+}
+.extra-part {
   display: flex;
   flex: 1;
   justify-content: center;
   align-items: center;
+}
+.middle {
+  background-color: white;
+  border-radius: 50px 20px;
+  color: rgb(35, 42, 56);
+}
+.head-tests {
+  font-size: 5rem;
+}
+.text-tests {
+  font-style: italic;
 }
