--- a/client/src/components/tutorials/Tutorials.css
+++ b/client/src/components/tutorials/Tutorials.css
@@ -15,12 +15,5 @@
 }
 .video-section {
   width: 60vw;
-}
-
-@media only screen and (max-width: 600px) {
-  .video-section {
-    width: 160vw;
-  }
-}
-@media only screen and (min-width: 600px) {
+  margin-left: 3%;
 }
