--- a/client/src/components/drivingTips/DrivingTips.css
+++ b/client/src/components/drivingTips/DrivingTips.css
@@ -1,11 +1,10 @@
 .first-container {
-  height: 100%;
-  margin: 0 auto;
   font-family: cursive;
-  font-size: 1.2rem;
 }
 .header-tips {
   margin-top: 70px;
+}
+.first-part {
 }
 h1,
 h4 {
@@ -17,21 +16,19 @@ h4 {
 }
 .text-part {
   min-width: 50%;
-  margin: 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-.image-part {
+.tips-image-part {
   display: flex;
   flex: 1;
   justify-content: center;
   align-items: center;
-  margin: 30px;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 900px) {
   .order1 {
     -webkit-order: 1;
   }
