--- a/client/src/components/home/Cards.css
+++ b/client/src/components/home/Cards.css
@@ -8,10 +8,39 @@
   font-family: "Rowdies", cursive;
   font-size: 1.4rem;
 }
-.coaching {
-  font-size: 3rem;
+.cards-part {
+  margin-top: 30px;
 }
-h1 {
+.card-button {
+  font-size: 20px;
+}
+.head-card {
   font-family: "Rowdies", cursive;
+  font-weight: 700;
   font-size: 7rem;
+  color: #0d739b;
+}
+.get-touch {
+  background-color: #0d739b;
+  color: #fff !important;
+  font-size: 2rem;
+  transition: background-color 0.2s ease-in-out;
+  -webkit-appearance: none;
+  position: relative;
+  display: inline-block;
+  text-decoration: none;
+  font-weight: 700;
+  border: 0;
+  outline: 0;
+  cursor: pointer;
+  border-radius: 8px;
+  text-shadow: -1px -1px 0.5px rgba(0, 0, 0, 0.5);
+  overflow: hidden;
+  box-shadow: inset 0px 0px 0px 1px rgba(0, 0, 0, 0.5),
+    inset 0px 2px 1px 0px rgba(255, 255, 255, 0.75);
+  padding: 10px;
+}
+a:hover,
+a:link {
+  text-decoration: none;
 }
