--- a/client/src/components/home/Picture.css
+++ b/client/src/components/home/Picture.css
@@ -2,7 +2,7 @@ html {
   scroll-behavior: smooth;
 }
 .first-image {
-  min-width: 100vw;
+  width: 100vw;
 }
 .driver-card {
   position: absolute;
@@ -14,7 +14,7 @@ html {
 }
 .card-title {
   color: white;
-  font-size: 5rem;
+  font-size: 500%;
   line-height: 1;
   text-transform: uppercase;
   text-align: center;
@@ -33,17 +33,12 @@ html {
 .go {
   width: 100px;
   position: absolute;
-  bottom: 20px;
-  left: 800px;
+  top: 90%;
+  left: 50%;
   padding: 0;
   cursor: pointer;
   display: flex;
   flex: 1;
   justify-content: center;
   align-items: center;
-}
-@media only screen and (max-width: 600px) {
-  .first-image {
-    width: 500px;
-  }
 }
