--- a/client/src/components/home/Practice.css
+++ b/client/src/components/home/Practice.css
@@ -7,17 +7,20 @@
 .practice-pic {
   width: 15rem;
 }
+.practice-pic:hover {
+  box-shadow: 20px 20px 20px rgb(78, 132, 146);
+}
 .practice-text {
   display: flex;
   flex: 1;
   justify-content: center;
   align-items: center;
+  color: rgb(78, 135, 150);
+  font-weight: 700;
+  margin: 20px;
 }
 h1 {
   color: #fd8a5e;
-}
-h5 {
-  color: #ff598f;
 }
 .driver-card {
   font-size: 1vw;
@@ -28,4 +31,11 @@ h5 {
   height: auto;
   display: block;
   z-index: 999;
+}
+.third-part {
+  background-color: #f5f5f5;
+  height: 50%;
+  max-width: 75%;
+  margin-bottom: 40px;
+  border-radius: 40px 20px;
 }
