--- a/client/src/components/tests/Tests.css
+++ b/client/src/components/tests/Tests.css
@@ -2,9 +2,9 @@
   height: 100%;
   margin: 0;
   font-family: "Source Sans Pro", Helvetica, sans-serif;
-  font-size: 1.4rem;
+  font-size: 130%;
   font-weight: 600;
-  background-color:rgb(227, 228, 231);
+  background-color: rgb(227, 228, 231);
   color: rgb(35, 42, 56);
 }
 .image-part {
