--- a/client/src/components/home/Practice.css
+++ b/client/src/components/home/Practice.css
@@ -1,41 +1,31 @@
-.container {
+.third-part {
   height: 100%;
   margin: 0;
   font-family: "Rowdies", cursive;
+  background-color: rgb(228, 233, 236);
 }
 
 .practice-pic {
-  width: 15rem;
-}
-.practice-pic:hover {
-  box-shadow: 20px 20px 20px rgb(78, 132, 146);
-}
-.practice-text {
   display: flex;
   flex: 1;
   justify-content: center;
-  align-items: center;
-  color: rgb(78, 135, 150);
+  align-items: flex-end;
+}
+.practice-text-first,
+.practice-text-second {
+  display: flex;
+  flex: 1;
+  justify-content: center;
+  align-items: flex-end;
+  color: rgb(51, 86, 95);
   font-weight: 700;
   margin: 20px;
 }
-h1 {
-  color: #fd8a5e;
-}
-.driver-card {
-  font-size: 1vw;
-}
 .practice-pic:hover {
+  box-shadow: 20px 20px 20px rgb(78, 132, 146);
   position: relative;
   width: 250px;
   height: auto;
   display: block;
   z-index: 999;
-}
-.third-part {
-  background-color: #f5f5f5;
-  height: 50%;
-  max-width: 75%;
-  margin-bottom: 40px;
-  border-radius: 40px 20px;
 }
