--- a/client/src/components/home/Picture.css
+++ b/client/src/components/home/Picture.css
@@ -14,7 +14,7 @@ html {
 }
 .card-title {
   color: white;
-  font-size: 500%;
+  font-size: 48px;
   line-height: 1;
   text-transform: uppercase;
   text-align: center;
