--- a/client/src/components/home/Cards.css
+++ b/client/src/components/home/Cards.css
@@ -9,7 +9,8 @@
   font-size: 1.4rem;
 }
 .cards-part {
-  margin-top: 30px;
+  margin-top: 3%;
+  margin-bottom: 4%;
 }
 .card-button {
   font-size: 20px;
@@ -43,4 +44,16 @@
 a:hover,
 a:link {
   text-decoration: none;
+}
+.go {
+  width: 100px;
+  position: absolute;
+  top: 90%;
+  left: 50%;
+  padding: 0;
+  cursor: pointer;
+  display: flex;
+  flex: 1;
+  justify-content: center;
+  align-items: center;
 }
