--- a/client/src/components/home/Practice.css
+++ b/client/src/components/home/Practice.css
@@ -1,23 +1,44 @@
 .third-part {
-  height: 100%;
+  height: 80%;
   margin: 0;
   font-family: "Rowdies", cursive;
   background-color: #AED6F1   ;
   display: flex;
-  align-items: center;
+  flex: 1;
   justify-content: center;
+  align-items: center;
 }
 
 .practice-text {
   color: rgb(51, 86, 95);
   font-weight: 700;
-  margin: 20px;
 }
 .practice-pic:hover {
   box-shadow: 20px 20px 20px rgb(78, 132, 146);
   position: relative;
-  width: 35%;
+  width: 75%;
   height: auto;
   display: block;
   z-index: 999;
+}
+.comment-Button {
+  height: 20%;
+  background-color: #AED6F1   ;
+  display: flex;
+  flex: 1;
+  justify-content: center;
+  
+}
+.third-go{
+  width: 100px;
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  padding: 0;
+  cursor: pointer;
+  display: flex;
+}
+.third-go:hover {
+  box-shadow: inset 0 0 0 2px #b4ecff;
+  color: #e9f1f3 !important;
 }
