--- a/client/src/components/home/Practice.css
+++ b/client/src/components/home/Practice.css
@@ -2,7 +2,7 @@
   height: 80%;
   margin: 0;
   font-family: "Rowdies", cursive;
-  background-color: #AED6F1   ;
+  background-color: #aed6f1;
   display: flex;
   flex: 1;
   justify-content: center;
@@ -23,20 +23,17 @@
 }
 .comment-Button {
   height: 20%;
-  background-color: #AED6F1   ;
+  background-color: #aed6f1;
   display: flex;
   flex: 1;
   justify-content: center;
-  
 }
-.third-go{
+.third-go {
   width: 100px;
   position: absolute;
   top: 40%;
-  left: 50%;
-  padding: 0;
+  left: -95%;
   cursor: pointer;
-  display: flex;
 }
 .third-go:hover {
   box-shadow: inset 0 0 0 2px #b4ecff;
