some bugs and CSS

--- a/client/src/components/home/Practice.css
+++ b/client/src/components/home/Practice.css
@@ -2,7 +2,7 @@
   height: 80%;
   margin: 0;
   font-family: "Rowdies", cursive;
-  background-color: #AED6F1   ;
+  background-color: #3498DB  ;
   display: flex;
   flex: 1;
   justify-content: center;
@@ -22,8 +22,8 @@
   z-index: 999;
 }
 .comment-Button {
-  height: 20%;
-  background-color: #AED6F1   ;
+  height: 15%;
+  background-color: #3498DB   ;
   display: flex;
   flex: 1;
   justify-content: center;
