--- a/client/src/components/contactUs/ContactPart.css
+++ b/client/src/components/contactUs/ContactPart.css
@@ -17,4 +17,8 @@ a {
   font-size: 250%;
   margin-top: 70px;
   font-family: "Source Sans Pro", Helvetica, sans-serif;
+  display: flex;
+  flex: 1;
+  justify-content: center;
+  align-items: center;
 }
