--- a/LandingPage/assets/css/main.css
+++ b/LandingPage/assets/css/main.css
@@ -94,10 +94,10 @@ input, select, textarea {
 
 	body {
 		background-color: #935d8c;
-		background-image: url("images/overlay.png"), -moz-linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
-		background-image: url("images/overlay.png"), -webkit-linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
-		background-image: url("images/overlay.png"), -ms-linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
-		background-image: url("images/overlay.png"), linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
+		background-image: url("images/overlay.png"), -moz-linear-gradient(45deg, #f5f0f1 15%, #6b5d94 85%);
+		background-image: url("images/overlay.png"), -webkit-linear-gradient(45deg, #f5f0f1 15%, #6b5d94 85%);
+		background-image: url("images/overlay.png"), -ms-linear-gradient(45deg, #f5f0f1 15%, #6b5d94 85%);
+		background-image: url("images/overlay.png"), linear-gradient(45deg, #111010 15%, #6b5d94 85%);
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
