small css changes

--- a/client/src/components/drivingTips/DrivingTips.css
+++ b/client/src/components/drivingTips/DrivingTips.css
@@ -6,9 +6,13 @@
 .first-part {
   font-size: 1.2rem;
 }
-h1,
-h4 {
+h1 {
   color: rgb(7, 72, 83);
+}
+.sub-header-tips {
+  color: rgb(7, 72, 83);
+  font: 1.3rem;
+  font-weight: bold;
 }
 .text-part {
   min-width: 50%;
@@ -16,6 +20,7 @@ h4 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  font-family: "Source Sans Pro", Helvetica, sans-serif;
 }
 .tips-image-part {
   display: flex;
