--- a/client/src/components/SignUp/style.css
+++ b/client/src/components/SignUp/style.css
@@ -30,6 +30,11 @@ form input {
     font-weight: bold;
     padding: 12px 15px;
     color: #ffffff;
+    margin-bottom: 10px;
+}
+.auth-Button {
+    margin-bottom: 10px;
+    margin-right: 0.5rem !important;
 }
 
 .errorMsg {
