--- a/client/src/components/freeTest/FreeTest.css
+++ b/client/src/components/freeTest/FreeTest.css
@@ -1,5 +1,6 @@
 .free-test {
-  height: 100%;
+  min-height: 100%;
+  position: relative;
   margin: 0 auto;
   font-size: 0.9rem;
   background-color: rgb(252, 254, 255);
@@ -9,6 +10,7 @@ h1 {
 }
 h3 {
   font-size: 2.4vh;
+  font-weight: 600;
 }
 label {
   font-size: 2vh;
