--- a/client/src/components/drivingTips/DrivingTips.css
+++ b/client/src/components/drivingTips/DrivingTips.css
@@ -10,7 +10,6 @@ h1 {
   color: rgb(7, 72, 83);
 }
 .sub-header-tips {
-
   color: rgb(7, 72, 83);
   font: 1.3rem;
   font-weight: bold;
@@ -28,6 +27,9 @@ h1 {
   flex: 1;
   justify-content: center;
   align-items: center;
+}
+.position-header {
+  flex: 0;
 }
 .first,
 .third {
